--- a/KGERP/Views/WareHouse/_PurchaseReturnSlaveData.cshtml
+++ b/KGERP/Views/WareHouse/_PurchaseReturnSlaveData.cshtml
@@ -84,7 +84,7 @@
                         <div class="box-body">
                             <div class="form-group" style="text-align:center;">
                                 <h3>
-                                    There are no Received Quantity yet.
+                                    Items have been returned.
                                 </h3>
                             </div>
                         </div>
